--- a/imageMapGen.html
+++ b/imageMapGen.html
@@ -15,6 +15,10 @@
         <h2>Create Points</h2>
         <button id="newBox" onclick="draw()">Add new box</button>
     </div>
+    <div id="code">
+        <h2>Generate code</h2>
+        <button id="genCode">Generate</button>
+    </div>
 </body>
 <script src="imageMapFuncs.js"></script>
 
@@ -29,6 +33,8 @@
     
     //get html elements
     var imgContent = document.getElementById("imgManip");
+    var genCode = document.getElementById("genCode");
+    var code = document.getElementById("code");
     var content = document.getElementById("upload");
     var newBox = document.getElementById("newBox");
     var next0 = document.getElementById("next0");
@@ -54,7 +60,6 @@
             //Things that happen when the image has loaded.
             x = img.width;
             y = img.height;
-            //console.log("First: " + x + " : " + y);
             ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
         }
     }   
@@ -106,6 +111,9 @@
                     break;
             }
         }
+    }
+    genCode.onclick = function(){
+        //code for displaying generated html code
     }
 
 </script>
